...
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_gravity="center"
			android:visibility="gone" />

		<jp.co.dac.ma.sdk.widget.DACVideoPlayerView
			android:id="@+id/ad_video_player"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true" />

		<RelativeLayout
			android:id="@+id/video_controller"
...
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:background="@android:color/transparent"
				android:scaleType="fitCenter" />

			<jp.co.dac.ma.sdk.widget.FullscreenButton
				android:id="@+id/fullscreen_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:background="@android:color/transparent"
				android:scaleType="fitCenter" />
...
